changing css path

--- a/public/news.html
+++ b/public/news.html
@@ -3,7 +3,7 @@
 <head>
 <title>News</title>
 <!-- Bootstrap -->
-<link href="../app/assets/stylesheets/bootstrap.css" rel="stylesheet" media="screen">
+<link href="assets/stylesheets/bootstrap.css" rel="stylesheet" media="screen">
 <style media="screen" type="text/css">
             #main-panel{
                 background-color: #7FFFD4   
@@ -38,7 +38,7 @@
 </head>
 <body>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="../app/assets/javascripts/bootstrap.js"></script>
+<script src="assets/javascripts/bootstrap.js"></script>
 <div class "container-fluid">
   <div class="row-fluid">
     <div class="span12" id="main-panel">
