changing css path

--- a/public/ballet.html
+++ b/public/ballet.html
@@ -4,7 +4,7 @@
         <head>
             <title>Ballet</title>
             <!-- Bootstrap -->
-            <link href="../app/assets/stylesheets/bootstrap.css" rel="stylesheet" media="screen">
+            <link href="assets/bootstrap/css" rel="stylesheet" media="screen">
             <style media="screen" type="text/css">
             body {
            background-color:  #7FFFD4 ;
@@ -26,7 +26,7 @@
                  Fans will have missed the reckless spontaneity that Cojocaru enjoys with her scheduled Onegin, Johan Kobborg, but his gallant last-minute substitute, Stuttgart Ballet's Jason Reilly, provided a safe pair of hands for Cranko's acrobatic pairwork, and Cojocaru had drama enough for both. The tiny star hurled herself into the delirious duets and delivered a closing scene of remarkable complexity".
             </p>
 
-            <img src="../app/assets/images/onegin.jpg" alt="onegin">
+            <img src="/assets/images/onegin.jpg" alt="onegin">
            
             <br>article by Louise Levene</br>
         </body>
