--- a/public/ballroom.html
+++ b/public/ballroom.html
@@ -4,7 +4,7 @@
         <head>
             <title>Ballroom</title>
             <!-- Bootstrap -->
-            <link href="../app/assets/stylesheets/bootstrap.css" rel="stylesheet" media="screen">
+            <link href="assets/bootstrap.css" rel="stylesheet" media="screen">
             <style media="screen" type="text/css">
 
             img {
@@ -24,7 +24,7 @@
 
             </p>
 
-            <img src="../app/assets/images/ballroom.jpg" alt="onegin">
+            <img src="/assets/images/ballroom.jpg" alt="onegin">
         </body>
     </html>
 
