--- a/public/modern.html
+++ b/public/modern.html
@@ -4,7 +4,7 @@
         <head>
             <title>Modern</title>
             <!-- Bootstrap -->
-            <link href="../app/assets/stylesheets/bootstrap.css" rel="stylesheet" media="screen">
+            <link href="assets/bootstrap.css" rel="stylesheet" media="screen">
             <style media="screen" type="text/css">
             body {
            background-color:  #7FFFD4 ;
@@ -22,7 +22,7 @@
                "Carlos Acosta celebrates his fortieth birthday this year, and while he might no longer have the full-on flying swagger he landed in London with in the '90s, the Cuban is still one heck of a dancer. No-one can turn on the charm and charisma quite like Carlos, and in this retrospective show he'll be revisiting some of his favourite roles from the classical and neo-classical canon". 
             </p>
 
-            <img src="../app/assets/images/modern.jpg" alt="modern">
+            <img src="/assets/images/modern.jpg" alt="modern">
         </body>
     </html>
 
