--- a/public/zumba.html
+++ b/public/zumba.html
@@ -4,7 +4,7 @@
         <head>
             <title>Zumba</title>
             <!-- Bootstrap -->
-            <link href="../app/assets/stylesheets/bootstrap.css" rel="stylesheet" media="screen">
+            <link href="assets/bootstrap.css" rel="stylesheet" media="screen">
             <style media="screen" type="text/css">
             body {
            background-color:  #7FFFD4  
@@ -32,7 +32,7 @@
                 Perlman is here to open Zumba’s first office outside of America. The UK is the company’s second-biggest market, with 1.2 million people practising its mix of aerobics and dance steps. He hopes to quadruple that number and there’s every reason to expect he’ll do it. In American culture, Zumba is so ingrained it was a plot point in a recent Desperate Housewives episode. Michelle Obama has held a class on the White House lawn. They even have Zumba classes at the Pentagon. (They probably don’t wear the tasselled Zumba cargo pants and neon string vests at that one. The branded clothing, incidentally, is a £60 million business in itself). 
             </p>
 
-            <img src="../app/assets/images/zumba.jpg" alt="zumba">
+            <img src="/assets/images/zumba.jpg" alt="zumba">
            
             <br>article by Nisha Lilia Diu</br>
         </body>
