--- a/public/modern.html
+++ b/public/modern.html
@@ -22,7 +22,7 @@
                "Carlos Acosta celebrates his fortieth birthday this year, and while he might no longer have the full-on flying swagger he landed in London with in the '90s, the Cuban is still one heck of a dancer. No-one can turn on the charm and charisma quite like Carlos, and in this retrospective show he'll be revisiting some of his favourite roles from the classical and neo-classical canon". 
             </p>
 
-            <img src="/assets/images/modern.jpg" alt="modern">
+            <img src="modern.jpg" alt="modern">
         </body>
     </html>
 
