adjusting routs to asset pipeline

--- a/public/ballet.html
+++ b/public/ballet.html
@@ -26,7 +26,7 @@
                  Fans will have missed the reckless spontaneity that Cojocaru enjoys with her scheduled Onegin, Johan Kobborg, but his gallant last-minute substitute, Stuttgart Ballet's Jason Reilly, provided a safe pair of hands for Cranko's acrobatic pairwork, and Cojocaru had drama enough for both. The tiny star hurled herself into the delirious duets and delivered a closing scene of remarkable complexity".
             </p>
 
-            <img src="/assets/images/onegin.jpg" alt="onegin">
+            <img src="/assets/onegin.jpg" alt="onegin">
            
             <br>article by Louise Levene</br>
         </body>
