--- a/public/ballroom.html
+++ b/public/ballroom.html
@@ -24,7 +24,7 @@
 
             </p>
 
-            <img src="images/ballroom.jpg" alt="onegin">
+            <img src="assets/ballroom.jpg" alt="onegin">
         </body>
     </html>
 
